# synopsys-caffe

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  FEATURES.md  INSTALL.md  Makefile  Makefile.config.example  QUANTIZED_OP.md  README.md  appveyor.yml
.github/workflows/: container-centos-inside-ubuntu-image.yml  docker-synopsys-caffe-cpu.yml  windows-2019.yml
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake  WindowsDownloadPrebuiltDependencies.cmake  WindowsDownloadPrebuiltDependenciesLocal.cmake
cmake/Modules/: FindGFlags.cmake  FindGlog.cmake  FindLMDB.cmake  FindLevelDB.cmake  FindNumPy.cmake  FindOpenBLAS.cmake  FindProtobuf.cmake  FindSnappy.cmake  Findhdf5.cmake  Findprotobuf.cmake
data/FlyingChairs/FlyingChairs_examples/: 0000000-gt.flo
data/ILSVRC2016/: create_list.py
data/VOC0712/: create_data.sh  labelmap_yolo_voc.prototxt
data/coco/: labelmap_yolo_coco.prototxt
docker/cpu/: Dockerfile
examples/: 00-classification.ipynb  CMakeLists.txt
examples/cifar10/: convert_cifar_data.cpp
examples/ssd/: plot_detections.py  ssd_detect.py  ssd_pascal_resnet.py
examples/web_demo/: app.py
include/caffe/: blob.hpp  caffe.hpp  common.cuh  common.hpp  data_transformer.hpp  filler.hpp  layer.hpp  net.hpp  parallel.hpp  python_layer.hpp  sgd_solvers.hpp  solver.hpp
include/caffe/layers/: add_layer.hpp  annotated_data_layer.hpp  argmax_layer.hpp  atan_layer.hpp  attention_layer.hpp  base_conv_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  batch_to_space_nd_layer.hpp  bias_layer.hpp  black_augmentation_layer.hpp  bn_layer.hpp  broadcast_to_layer.hpp  ceil_layer.hpp  channel_norm_layer.hpp  concat_layer.hpp  conv_depthwise_layer.hpp  corr1d_layer.hpp  count_nonzero_layer.hpp  crop_and_resize.hpp  crop_and_resize_layer.hpp  custom_data_layer.hpp  data_augmentation_layer.hpp  data_layer.hpp  depth_to_space_layer.hpp  detection_output_layer.hpp  detection_subgraph_layer.hpp  div_layer.hpp  eltwise_layer.hpp  embedding_lookup_layer.hpp  embedding_lookup_sparse_layer.hpp  expand_dims_nd_layer.hpp  expand_layer.hpp  farthest_point_sample_layer.hpp  flo_writer_layer.hpp  float_reader_layer.hpp  float_writer_layer.hpp  floor_div_layer.hpp  floor_layer.hpp  floor_mod_layer.hpp  (+120 more)
include/caffe/test/: test_caffe_main.hpp  test_gradient_check_util.hpp
include/caffe/util/: bbox_util.hpp  cudnn.hpp  device_alternate.hpp  im2col.hpp  interp.hpp  io.hpp  math_functions.hpp  matio_io.hpp  mkl_alternate.hpp  yolo_preprocess.hpp
installation/: common.iap_xml  readme.txt
python/: CMakeLists.txt  apply_box_deltas.py  darknet.py  deform_conv2d.py  eltwise.py  generate_pyramid_anchors.py  maskrcnn_detection.py  maskrcnn_proposal.py  matrix_inverse.py  pad.py  pads.py  pre_roi_align.py  range.py  rank.py  requirements.txt  reshape.py  shape.py  slice.py  stack.py  statistics.py  stridedslice.py  yolov2.py
python/caffe/: __init__.py  _caffe.cpp  draw.py  io.py  model_libs.py
python/caffe/test/: test_solver.py
scripts/: CentOS_build_caffe.sh  build_win-py2.cmd  build_win.cmd  convert_inception_v3.py  cpp_lint.py  create_annoset.py  download_prebuilt_dependencies.py  ubuntu_python3_build_caffe_guide.md
scripts/travis/: build.sh  configure-make.sh  install-deps.sh  install-python-deps.sh  test.sh
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_transformer.cpp  layer_factory.cpp  net.cpp  solver.cpp
src/caffe/layers/: accuracy_layer.cpp  add_layer.cpp  annotated_data_layer.cpp  argmax_layer.cpp  atan_layer.cpp  attention_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  base_data_layer.cu  batch_norm_layer.cpp  batch_norm_layer.cu  batch_to_space_nd_layer.cpp  bias_layer.cpp  black_augmentation_layer.cpp  black_augmentation_layer.cu  bn_layer.cpp  bn_layer.cu  broadcast_to_layer.cpp  ceil_layer.cpp  concat_layer.cpp  conv_depthwise_layer.cpp  conv_layer.cpp  conv_layer.cu  conv_layer.ev.inc  corr1d_layer.cpp  correlation_layer.cpp  count_nonzero_layer.cpp  crop_and_resize.cpp  crop_and_resize_layer.cpp  custom_data_layer.cpp  data_augmentation_layer.cpp  data_augmentation_layer.cu  deconv_layer.cpp  deconv_layer.cu  dense_image_data_layer.cpp  densecrf_layer.cpp  depth_to_space_layer.cpp  depthtospace_layer.cpp  detection_output_layer.cpp  detection_output_layer.cu  (+172 more)
src/caffe/proto/: caffe.proto
src/caffe/solvers/: sgd_solver.cpp
src/caffe/test/: CMakeLists.txt  test_annotated_data_layer.cpp  test_dense_image_data_layer.cpp  test_im2col_kernel.cu  test_multibox_loss_layer.cpp  test_platform.cpp  test_roi_pooling_layer.cpp  test_smooth_L1_loss_layer.cpp  test_softmax_with_loss_layer.cpp  test_upsample_layer.cpp  test_util_blas.cpp
src/caffe/util/: bbox_util.cpp  bbox_util.cu  blocking_queue.cpp  hdf5.cpp  im2col.cpp  im2col.cu  im_transforms.cpp  io.cpp  math_functions.cpp  math_functions.cu  matio_io.cpp  permutohedral.cpp  signal_handler.cpp  upgrade_proto.cpp  yolo_preprocess.cpp
tools/: CMakeLists.txt  convert_annoset.cpp
tools/extra/: plot_training_log.py.example  resize_and_crop_images.py
